[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pyRestTable/_version.py
versionfile_build = pyRestTable/_version.py
tag_prefix =
parentdir_prefix = pyRestTable-

[coverage:run]
#source = tests/test_results.py
#include = src/pyRestTable/rest_table.py
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
    src/pyRestTable/_version.py
    src/pyRestTable/cansas.py
