[coverage:run]
concurrency=
    thread
    multiprocessing
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
    pyRestTable/cansas.py

[flake8]
max-line-length = 115
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F401,  # imported but unused
    E402,  # module level import not at top of file (for cansas.py)
    F722,  # allow Annotated[typ, some_func("some string")]
    F811,  # support typing.overload decorator
    W503,
    W504,
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs/source,

[isort]
profile=black

[metadata]
name = pyRestTable
copyright = '2014-2022, Pete R. Jemian'
description = Format a nice table in reST (reStructuredText) from Python.
description_file = README.md
description_file_content_type = text/markdown
url = https://github.com/prjemian/pyRestTable
license = Creative Commons Attribution 4.0 International Public License (see LICENSE file)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ['reST', 'table', 'documentation']
author = Pete R. Jemian
author_email = prjemian@gmail.com
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    License :: Freely Distributable
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
# python_requires = >=3.8
packages = find:
setup_requires =
    setuptools_scm[toml]>=6.2

# Specify any package dependencies below.  Examples shown
install_requires =
    lxml
    numpy
    pip

[options.extras_require]
# For development tests/docs
dev =
    coveralls
    pytest
    pytest-cov
    setuptools-scm

# Specify any package data to be included in the wheel below.
[options.package_data]
pyRestTable =
    # Include our documentation helpers:
    "*.rst"
    "*.md"

# [options.entry_points]
# console_scripts =
#     pyRestTable = pyRestTable.cli:main
